base/production/patchats/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patchats
  namespace: production
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: patchats
  template:
    metadata:
      labels:
        app: patchats
        version: "N/A" # replaced from kustomization.yaml
    spec:
      nodeSelector:
        agentpool: prodpoolv1
      tolerations:
        - key: workload
          operator: Equal
          value: production
          effect: NoSchedule
      volumes:
        - name: spring-config
          configMap:
            name: patchats-spring-config
      containers:
        - name: patchats
          image: patinanetwork/patchats-arm
          args:
            - --spring.config.additional-location=file:/config/
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: spring-config
              mountPath: /config
              readOnly: true
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "40m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
